Fechamento testes Preços Convergencia. Alteração comportamento na consulta cobertura.

--- a/src/test/resources/htmlReporter.html
+++ b/src/test/resources/htmlReporter.html
@@ -41,7 +41,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>Jun 25, 2018 9:53:39 AM</span>
+				<span class='label suite-start-time'>Jul 4, 2018 10:38:10 PM</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.3</span>
@@ -149,15 +149,15 @@
 				
 				<li class='test displayed active  error' status='error' bdd='false' test-id='2'>
 					<div class='test-heading'>
-						<span class='test-name'>execucao-dos-cenarios-de-testes-diarios-assine-vivo;verifica-paginas---testes-diarios</span>
-						<span class='test-time'>Jun 25, 2018 9:53:39 AM</span>
+						<span class='test-name'>execucao-dos-testes-de-precos-dos-cards-de-convergencia;precos-cards-de-convergencia---massivo-sp</span>
+						<span class='test-time'>Jul 4, 2018 10:38:10 PM</span>
 						<span class='test-status right error'>error</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 25, 2018 9:53:39 AM</span>
-	<span class='label end-time'>Jun 25, 2018 9:57:19 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 3m 39s+871ms</span>
+	<span class='label start-time'>Jul 4, 2018 10:38:10 PM</span>
+	<span class='label end-time'>Jul 4, 2018 10:39:11 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 1m 1s+913ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -171,13 +171,13 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>9:57:19 AM</td>
-					<td class='step-details'>Cenario Verifica paginas - Testes Diarios executado com sucesso!</td>
+					<td class='timestamp'>10:39:11 PM</td>
+					<td class='step-details'>Cenario Precos Cards de Convergencia - Massivo SP executado com sucesso!</td>
 				</tr>
 				<tr class='log' status='error'>
 					<td class='status error' title='error' alt='error'><i class='material-icons'>error</i></td>
-					<td class='timestamp'>9:57:19 AM</td>
-					<td class='step-details'>Cenario Verifica paginas - Testes Diarios executado com falha.</td>
+					<td class='timestamp'>10:39:11 PM</td>
+					<td class='step-details'>Cenario Precos Cards de Convergencia - Massivo SP executado com falha.</td>
 				</tr>
 			</tbody>
 		</table>
@@ -228,19 +228,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jun 25, 2018 9:53:39 AM</div>
+					<div class='panel-lead'>Jul 4, 2018 10:38:10 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jun 25, 2018 9:57:19 AM</div>
+			 		<div class='panel-lead'>Jul 4, 2018 10:39:11 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>219,874ms</div>
+					<div class='panel-lead'>61,913ms</div>
 				</div>
 			</div>
 		</div>
