--- a/src/test/resources/htmlReporter.html
+++ b/src/test/resources/htmlReporter.html
@@ -41,7 +41,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>Sep 2, 2018 6:09:59 AM</span>
+				<span class='label suite-start-time'>Oct 22, 2018 2:50:28 PM</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.3</span>
@@ -149,15 +149,15 @@
 				
 				<li class='test displayed active  error' status='error' bdd='false' test-id='2'>
 					<div class='test-heading'>
-						<span class='test-name'>execucao-dos-testes-de-regressao-do-release;combo-2p-sp---portal-assine-b2b</span>
-						<span class='test-time'>Sep 2, 2018 6:09:59 AM</span>
+						<span class='test-name'>execucao-dos-cenarios-de-testes-diarios-assine-vivo;valida-c2cr-fsp---testes-diarios</span>
+						<span class='test-time'>Oct 22, 2018 2:50:28 PM</span>
 						<span class='test-status right error'>error</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 2, 2018 6:09:59 AM</span>
-	<span class='label end-time'>Sep 2, 2018 6:11:53 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 1m 53s+790ms</span>
+	<span class='label start-time'>Oct 22, 2018 2:50:28 PM</span>
+	<span class='label end-time'>Oct 22, 2018 2:53:04 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 2m 36s+38ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -171,13 +171,13 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:11:53 AM</td>
-					<td class='step-details'>Cenario Combo 2P SP - Portal Assine B2B executado com sucesso!</td>
+					<td class='timestamp'>2:53:04 PM</td>
+					<td class='step-details'>Cenario Valida C2CR FSP - Testes Diarios executado com sucesso!</td>
 				</tr>
 				<tr class='log' status='error'>
 					<td class='status error' title='error' alt='error'><i class='material-icons'>error</i></td>
-					<td class='timestamp'>6:11:53 AM</td>
-					<td class='step-details'>Cenario Combo 2P SP - Portal Assine B2B executado com falha.</td>
+					<td class='timestamp'>2:53:04 PM</td>
+					<td class='step-details'>Cenario Valida C2CR FSP - Testes Diarios executado com falha.</td>
 				</tr>
 			</tbody>
 		</table>
@@ -228,19 +228,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Sep 2, 2018 6:09:59 AM</div>
+					<div class='panel-lead'>Oct 22, 2018 2:50:28 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Sep 2, 2018 6:11:53 AM</div>
+			 		<div class='panel-lead'>Oct 22, 2018 2:53:04 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>113,792ms</div>
+					<div class='panel-lead'>156,144ms</div>
 				</div>
 			</div>
 		</div>
