Alterações testes Diários.

--- a/src/test/resources/htmlReporter.html
+++ b/src/test/resources/htmlReporter.html
@@ -41,7 +41,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>Apr 5, 2019 8:08:18 AM</span>
+				<span class='label suite-start-time'>May 14, 2019 11:28:50 AM</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.3</span>
@@ -147,17 +147,17 @@
 			<ul id='test-collection' class='test-collection'>
 				
 				
-				<li class='test displayed active  error' status='error' bdd='false' test-id='2'>
+				<li class='test displayed active  error' status='error' bdd='false' test-id='3'>
 					<div class='test-heading'>
-						<span class='test-name'>execucao-dos-testes-de-regressao-do-release;combo-3p---portal-assine-b2b</span>
-						<span class='test-time'>Apr 5, 2019 8:08:18 AM</span>
+						<span class='test-name'>execucao-dos-cenarios-de-testes-diarios-assine-vivo;acesso-chat-oracle</span>
+						<span class='test-time'>May 14, 2019 11:28:50 AM</span>
 						<span class='test-status right error'>error</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 5, 2019 8:08:18 AM</span>
-	<span class='label end-time'>Apr 5, 2019 8:11:11 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 2m 52s+94ms</span>
+	<span class='label start-time'>May 14, 2019 11:28:50 AM</span>
+	<span class='label end-time'>May 14, 2019 11:35:11 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 6m 20s+810ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -171,13 +171,13 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>8:11:11 AM</td>
-					<td class='step-details'>Cenario Combo 3P - Portal Assine B2B executado com sucesso!</td>
+					<td class='timestamp'>11:35:11 AM</td>
+					<td class='step-details'>Cenario Acesso Chat Oracle executado com sucesso!</td>
 				</tr>
 				<tr class='log' status='error'>
 					<td class='status error' title='error' alt='error'><i class='material-icons'>error</i></td>
-					<td class='timestamp'>8:11:11 AM</td>
-					<td class='step-details'>Cenario Combo 3P - Portal Assine B2B executado com falha.</td>
+					<td class='timestamp'>11:35:11 AM</td>
+					<td class='step-details'>Cenario Acesso Chat Oracle executado com falha.</td>
 				</tr>
 			</tbody>
 		</table>
@@ -228,19 +228,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Apr 5, 2019 8:08:18 AM</div>
+					<div class='panel-lead'>May 14, 2019 11:28:50 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Apr 5, 2019 8:11:11 AM</div>
+			 		<div class='panel-lead'>May 14, 2019 11:35:11 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>172,096ms</div>
+					<div class='panel-lead'>380,811ms</div>
 				</div>
 			</div>
 		</div>
